<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Email login</string>
    <string name="action_settings">Settings</string>
    <string name="lblNombre">Nombre</string>
    <string name="lblContrasenia">Contraseña</string>
    <string name="padNombre">user name</string>
    <string name="padContrasenia">password</string>
    <string name="btnValue">Entrar</string>
    <string name="title_activity_email">Email</string>
    <string name="hello_world">BIIENVENIDO USUARIO</string>

</resources>
